- small code adjustment to make sure our object enumeration works with MySQL 5.5
- fixed exection of command ";" to throw a query was empty exception instead of IndexOutOfRangeException 
  (MySQL bug #59537, Oracle bug #11766433)
- fixed bug that prevented setting the membershipprovider's ApplicationName property at runtime
  (MySQL bug #59438, Oracle bug #11770465)

Version 6.0.7
- Fix authorization popup after modifying stored procedure in VS (Bug #44715)
- Dispose EventLog after use in MySql.Web.dll provider classes, to avoid wasting resources
  (Bug #55793)
- Handle cases where server returns unparsable (out-of-range) double values
  (Bug#55644)
- Improve performance of write operations (e.g insert) if compression is enabled
  (Bug #48243)
- Improve performance of MySqlHelper.EscapeString()
- Fix membership provider creation failure, when default database character set is different from latin1 (Bug #53174)
- Fix "Connection must be valid and open" exception When UpdateBatchSize > 1 
  and MySqlDataAdapter is not using an open connection (Bug #38411)
- Make sure MySqlDataAdapter.Update() works for custom stored procedure driven update commands 
  that make use of UpdateRowSource.FirstReturnedRecord (Bug#54895)
- Call DataTable.AcceptChanges() for affected tables at the end of MySqlAdapter.Update, 
  to match the documented IDataAdater behavior (bug#54863)
- Fix race condition (concurrent reading/modification of the same DataSet) in StoredProcedure.GetParameters()
  (bug#49118)
- Fix problems with MySqlDataAdapter insert command, when batch size is > 1, and 
  INSERT statement has expression with parentheses (e.g arithmetical expressions) (bug #54386)
- When command is killed, e.g as result of timeout, error code returned from server 
  is not necessarily 1317 (QueryInterrupted). It might as well be 1028 (FileSortAborted).
  Fix timeout handling to handle both error codes in the same fashion (bug #53357)